--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>DISC Test - Web version</title>
+  <title>DISC — Dual Mapping (Fixed)</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -40,7 +40,7 @@
             </div>
 
             <div class="actions">
-              <button id="testBtn" class="secondary" type="button">Test with Sample Data</button>
+              <button id="manualTestBtn" class="secondary" type="button">Run Manual Test</button>
               <button id="startBtn" class="primary" type="button">Start Assessment</button>
             </div>
           </div>
@@ -112,7 +112,7 @@
       </div>
       
       <div class="footer">
-        Made by Shin
+        Made by Shin via Vibe Coding
       </div>
     </div>
   </div>
