--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div id="introErr" role="alert" class="error hidden"></div>
 
             <div class="tip">
-              <strong>Note:</strong> You can return to this screen later to edit your details — your quiz answers will be kept safe.
+              <strong>Note:</strong> You can return to this screen later to edit your details. Your progress saved.
             </div>
 
             <div class="actions">
