--- a/index.html
+++ b/index.html
@@ -106,6 +106,8 @@
               <button id="downloadBtn" class="secondary" type="button">Download PDF</button>
               <button id="retakeBtn" class="secondary" type="button">Retake</button>
             </div>
+            
+            <div id="downloadStatus" class="download-status hidden"></div>
           </div>
         </section>
 
