--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
+<body class="min-h-screen">
   <div class="wrap">
     <div class="card" role="application" aria-label="DISC quiz">
       <div class="content">
@@ -21,14 +21,14 @@
             </div>
 
             <div class="form-grid">
-              <div class="grid-2">
+              <div class="grid grid-cols-1 md:grid-cols-2 gap-3">
                 <div>
-                  <label for="name">Full Name</label>
-                  <input id="name" type="text" placeholder="Enter your full name" autocomplete="name" />
+                  <label for="name" class="block mb-2 text-slate-500 text-sm text-left">Full Name</label>
+                  <input id="name" type="text" placeholder="Enter your full name" autocomplete="name" class="w-full p-3 rounded-xl border border-slate-200 bg-transparent text-base transition-all duration-200" />
                 </div>
                 <div>
-                  <label for="org">Organisation</label>
-                  <input id="org" type="text" placeholder="Your Department" autocomplete="organization" />
+                  <label for="org" class="block mb-2 text-slate-500 text-sm text-left">Organisation</label>
+                  <input id="org" type="text" placeholder="Your Department" autocomplete="organization" class="w-full p-3 rounded-xl border border-slate-200 bg-transparent text-base transition-all duration-200" />
                 </div>
               </div>
             </div>
@@ -72,7 +72,7 @@
         <!-- Results -->
         <section id="results" class="hidden">
           <div id="report">
-            <h2>DISC Personality Profile</h2>
+            <h2 class="text-2xl font-bold text-slate-900 text-center mb-4">DISC Personality Profile</h2>
 
             <div id="who" class="muted"></div>
 
@@ -80,21 +80,21 @@
               <div class="field report-card-fields">
                 <div>
                   <label for="resultName" class="report-card-label">Full Name</label>
-                  <input id="resultName" type="text" disabled>
+                  <input id="resultName" type="text" disabled class="w-full p-3 bg-slate-100 border border-slate-200 rounded-lg text-slate-500 cursor-not-allowed">
                 </div>
                 <div>
                   <label for="resultOrg" class="report-card-label">Organisation</label>
-                  <input id="resultOrg" type="text" disabled>
+                  <input id="resultOrg" type="text" disabled class="w-full p-3 bg-slate-100 border border-slate-200 rounded-lg text-slate-500 cursor-not-allowed">
                 </div>
               </div>
               <div class="field report-card-fields">
                 <div>
                   <label for="resultDate" class="report-card-label">Assessment Date</label>
-                  <input id="resultDate" type="text" disabled>
+                  <input id="resultDate" type="text" disabled class="w-full p-3 bg-slate-100 border border-slate-200 rounded-lg text-slate-500 cursor-not-allowed">
                 </div>
                 <div>
-                  <label for="resultTime" class="report-card-label">Time Spent (Minutes)</label>
-                  <input id="resultTime" type="text" disabled>
+                  <label for="resultTime" class="report-card-label">Time Spent</label>
+                  <input id="resultTime" type="text" disabled class="w-full p-3 bg-slate-100 border border-slate-200 rounded-lg text-slate-500 cursor-not-allowed">
                 </div>
               </div>
             </div>
