--- a/index.html
+++ b/index.html
@@ -3,13 +3,18 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>DISC — Dual Mapping (Fixed)</title>
+  <title>DISC – Dual Mapping (Fixed)</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body class="min-h-screen">
   <div class="wrap">
     <div class="card" role="application" aria-label="DISC quiz">
+      
+      <header role="banner">
+        <h1>DISC Personality Assessment</h1>
+      </header>
+
       <div class="content">
 
         <!-- Intro screen -->
@@ -48,7 +53,7 @@
 
         <!-- Quiz screen -->
         <section id="quiz" class="hidden">
-          <h2 id="quizHeader" class="quiz-header">Assessment — Questions</h2>
+          <h2 id="quizHeader" class="quiz-header">Assessment – Questions</h2>
 
           <div class="quiz-progress-container">
             <button id="backBtn" class="secondary" type="button">Back to Intro</button>
