--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>DISC – Dual Mapping (Fixed)</title>
+  <meta name="description" content="Take our fast DISC personality assessment and get your results instantly without manual counting. Discover your behavioral style (Dominance, Influence, Steadiness, Conscientiousness) with our automated scoring system." />
+  <meta name="keywords" content="DISC assessment, personality test, behavioral analysis, workplace personality, communication style, leadership assessment, fast results, automated scoring" />
+  
+  <title>DISC Assessment - Get Your Results Fast Without Counting Manually</title>
+  
+  <!-- Preload critical resources -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -12,7 +19,12 @@
     <div class="card" role="application" aria-label="DISC quiz">
       
       <header role="banner">
-        <h1>DISC Personality Assessment</h1>
+        <h1>
+          <svg style="width: 24px; height: 24px; display: inline-block; margin-right: 0.5rem; vertical-align: middle;" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.663 17h4.673M12 3v1m6.364 1.636l-.707.707M21 12h-1M4 12H3m3.343-5.657l-.707-.707m2.828 9.9a5 5 0 117.072 0l-.548.547A3.374 3.374 0 0014 18.469V19a2 2 0 11-4 0v-.531c0-.895-.356-1.754-.988-2.386l-.548-.547z" />
+          </svg>
+          DISC Personality Assessment
+        </h1>
       </header>
 
       <div class="content">
