--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <div id="who" class="muted"></div>
 
             <div class="report-card">
-              <div class="field report-card-fields">
+              <div class="report-card-fields">
                 <div>
                   <label for="resultName" class="report-card-label">Full Name</label>
                   <input id="resultName" type="text" disabled class="w-full p-3 bg-slate-100 border border-slate-200 rounded-lg text-slate-500 cursor-not-allowed">
@@ -103,8 +103,6 @@
                   <label for="resultOrg" class="report-card-label">Organisation</label>
                   <input id="resultOrg" type="text" disabled class="w-full p-3 bg-slate-100 border border-slate-200 rounded-lg text-slate-500 cursor-not-allowed">
                 </div>
-              </div>
-              <div class="field report-card-fields">
                 <div>
                   <label for="resultDate" class="report-card-label">Assessment Date</label>
                   <input id="resultDate" type="text" disabled class="w-full p-3 bg-slate-100 border border-slate-200 rounded-lg text-slate-500 cursor-not-allowed">
