--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </div>
 
             <div class="actions">
-              <button id="manualTestBtn" class="secondary" type="button">Run Manual Test</button>
+              <button id="manualTestBtn" class="secondary" type="button">Result Sample</button>
               <button id="startBtn" class="primary" type="button">Start Assessment</button>
             </div>
           </div>
